# project2SF

./: .gitignore  README.md  main.py  patchcore_train.py  pyproject.toml  requirements.txt
patchcore/: main.py  patchcore_apple.py  patchcore_apple2.py  patchcore_train.py  pyproject.toml  sort_outputs.py  to_pdf.py
patchcore/outputs/: classification_result.csv
yolo/: .gitignore  apple.yaml  yolo-train.py  yolo.ipynb
yolo/apple_yolo/apple/: args.yaml  results.csv
yolo/apple_yolo/apple2/: args.yaml  results.csv
yolo/apple_yolo/apple4/: args.yaml  results.csv
